=========
Changelog
=========

1.1.0a6 (unreleased)
====================

- Nothing changed yet.


1.1.0a5 (2015-09-09)
====================

- Fix Mercurial repositories after refactorings for Git broke it.


1.1.0a4 (2015-09-06)
====================

- Actually get pull-based Git repositories to work. Still experimental, though.


1.1.0a3 (2015-09-05)
====================

- Initial support for managing batou projects with git. Git repositories
  support pull-based and bundle-based shipping.

- Add backwards compatibility for `batou remote` to help users
  migrate their fingers.

1.1.0a2 (2015-09-03)
====================

- Fix updating from Batou 1.0


1.1.0a1 (2015-09-03)
====================

- Do request an update for packages installed from requirements.txt within
  the batou environment to help update VCS checkouts that are pinned.

- Clear PYTHONPATH for bootstrapping to avoid accidental interaction with
  unclean Python environments.

- Provide '--fast' mode: do not perform bootstrapping.

  This is a first step to improve bootstrapping times. The switch is rather dumb but allows us to work a) offline
  in some cases and b) develop faster.

- Fix unicode encoding/decoding in File handling. See #14944.
  (Ported from 1.0)

- Fold the runner invocation for `local` and `remote` into
  a single `deploy` command:

  $ ./batou deploy <environment>

  To force a local or remote invocation use --local and --remote. By default batou will assume a remote environment. To configure an environment's deployment mode use the `mode` attribute in the `environment` section::

      [environment]
      mode = local

  To specify a manual override on the commandline you can provide the `--local` or `--remote` arguments to the `run` command.

- Improve bootstrapping to give developers a better way
  to get started without installing batou system-wide
  or in a temporary virtualenv.

- Revamp README and documentation.

- Rework error handling and output management.
